--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Andin - Transport</title>
+  <title>AndinTransport</title>
 
   <!-- 
     - favicon
   -->
-  <link rel="shortcut icon" href="./favicon.svg" type="image/svg+xml">
+  <link rel="shortcut icon" href="./car.png" type="image/svg+xml">
 
   <!-- 
     - custom css link
@@ -79,11 +79,11 @@
         <ul class="social-list">
 
           <li>
-            <a href="#" class="social-link">
-              <ion-icon name="logo-facebook"></ion-icon>
+            <a href="https://www.facebook.com/andintransport/" class="social-link">
+                <ion-icon name="logo-facebook"></ion-icon>
             </a>
-          </li>
-
+        </li>
+        
           <li>
             <a href="#" class="social-link">
               <ion-icon name="logo-twitter"></ion-icon>
