--- a/index.html
+++ b/index.html
@@ -142,8 +142,10 @@
 
         </nav>
 
-        <button class="btn btn-primary">Book Now</button>
-
+        <button class="btn btn-primary" onclick="window.open('https://wa.me/6285336565485?text=Halo%20kak%20saya%20ingin%20bertanya', '_blank')">
+          Book Now
+      </button>
+        
       </div>
     </div>
 
