perubahan pada pakckages > news

--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
             </li>
 
             <li>
-              <a href="#package" class="navbar-link" data-nav-link>packages</a>
+              <a href="#news" class="navbar-link" data-nav-link>News</a>
             </li>
 
             <li>
@@ -453,17 +453,15 @@
         - #PACKAGE
       -->
 
-      <section class="package" id="package">
+      <section class="news" id="news">
         <div class="container">
 
-          <p class="section-subtitle">Popular Packeges Travel</p>
+          <!-- <p class="section-subtitle">Popular Packeges Travel</p> -->
 
-          <h2 class="h2 section-title">Travel by Amenna Safeeya</h2>
+          <h2 class="h2 section-title">OUR UPDATED NEWS</h2>
 
           <p class="section-text">
-            Fusce hic augue velit wisi quibusdam pariatur, iusto primis, nec nemo, rutrum. Vestibulum cumque laudantium.
-            Sit ornare
-            mollitia tenetur, aptent.
+            Explore our news to build trust and get the insights you need. Find the latest information and trusted reviews that demonstrate our commitment to you.
           </p>
 
           <ul class="package-list">
@@ -472,12 +470,12 @@
               <div class="package-card">
 
                 <figure class="card-banner">
-                  <img src="./assets/images/package/mecca.jpg" alt="Paket Umroh" loading="lazy">
+                  <img src="assets/images/Document-1.jpeg" alt="foto bersama" loading="lazy">
                 </figure>
 
                 <div class="card-content">
 
-                  <h3 class="h3 card-title">Paket Umroh Agustus 2024</h3>
+                  <h3 class="h3 card-title">uhuy</h3>
 
                   <p class="card-text">
                     "Segera laksanakan ibadah haji bersama tour and travel Amenna Safeeyah untuk pengalaman spiritual yang aman, nyaman, dan berkesan."
