Perubahan No Telephone

--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Andin - Transport</title>
+  <title>AndinTransport</title>
 
   <!-- 
     - favicon
   -->
-  <link rel="shortcut icon" href="./favicon.svg" type="image/svg+xml">
+  <link rel="shortcut icon" href="./car.png" type="image/svg+xml">
 
   <!-- 
     - custom css link
@@ -49,7 +49,7 @@
           <div class="wrapper">
             <p class="helpline-title">For Bisnis Inquires :</p>
 
-            <p class="helpline-number">+62 (853) 3656 5485</p>
+            <p class="helpline-number">+62 (819) 3822 1739</p>
           </div>
 
         </a>
@@ -79,11 +79,11 @@
         <ul class="social-list">
 
           <li>
-            <a href="#" class="social-link">
-              <ion-icon name="logo-facebook"></ion-icon>
+            <a href="https://www.facebook.com/andintransport/" class="social-link">
+                <ion-icon name="logo-facebook"></ion-icon>
             </a>
-          </li>
-
+        </li>
+        
           <li>
             <a href="#" class="social-link">
               <ion-icon name="logo-twitter"></ion-icon>
@@ -142,7 +142,10 @@
 
         </nav>
 
-        <button class="btn btn-primary">Book Now</button>
+        <button class="btn btn-primary" onclick="window.open('https://wa.me/6281938221739?text=Halo%20kak%20saya%20dari%20website%20AndinTransport%20ingin%20bertanya%20soal%20rental%20mobil', '_blank')">
+          Book Now
+      </button>
+      
 
       </div>
     </div>
