--- a/index.html
+++ b/index.html
@@ -478,26 +478,10 @@
                   <h3 class="h3 card-title">uhuy</h3>
 
                   <p class="card-text">
-                    "Segera laksanakan ibadah haji bersama tour and travel Amenna Safeeyah untuk pengalaman spiritual yang aman, nyaman, dan berkesan."
+                    "Staff AndinTransport gatau lagi ngapain"
                   </p>
 
                   <ul class="card-meta-list">
-
-                    <li class="card-meta-item">
-                      <div class="meta-box">
-                        <ion-icon name="time"></ion-icon>
-
-                        <p class="text">7D/6N</p>
-                      </div>
-                    </li>
-
-                    <li class="card-meta-item">
-                      <div class="meta-box">
-                        <ion-icon name="people"></ion-icon>
-
-                        <p class="text">pax: 10</p>
-                      </div>
-                    </li>
 
                     <li class="card-meta-item">
                       <div class="meta-box">
