--- a/index.html
+++ b/index.html
@@ -478,7 +478,7 @@
                   <h3 class="h3 card-title">uhuy</h3>
 
                   <p class="card-text">
-                    "Staff AndinTransport gatau lagi ngapain hehe"
+                    "Staff AndinTransport gatau lagi ngapain hehe hahahaahahahahqahahhah"
                   </p>
 
                   <ul class="card-meta-list">
