--- a/index.html
+++ b/index.html
@@ -7,19 +7,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>AndinTransport</title>
 
-  <!-- 
-    - favicon
-  -->
+  <!-- Logo Title  bos q -->
   <link rel="shortcut icon" href="./assets/images/logo/car.png" type="image/svg+xml">
 
-  <!-- 
-    - custom css link
-  -->
+  <!-- Link CSS -->
   <link rel="stylesheet" href="./assets/css/style.css">
 
-  <!-- 
-    - google font link
-  -->
+  <!-- Link FONT -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link
@@ -29,9 +23,7 @@
 
 <body id="top">
 
-  <!-- 
-    - #HEADER
-  -->
+  <!-- Header -->
 
   <header class="header" data-header>
 
@@ -151,16 +143,10 @@
 
   </header>
 
-
-
-
-
   <main>
     <article>
 
-      <!-- 
-        - #HERO
-      -->
+      <!-- Hero -->
 
       <section class="hero" id="home">
         <div class="container">
@@ -183,15 +169,7 @@
 
 
 
-
-
-      
-
-
-
-
-
-      <!-- #POPULAR -->
+      <!-- Rent Car -->
 
       <section class="popular" id="rent">
         <div class="container">
@@ -449,9 +427,7 @@
         </div>
       </section>
 
-      <!-- 
-        - #PACKAGE
-      -->
+     <!-- Berita -->
 
       <section class="news" id="news">
         <div class="container">
@@ -475,10 +451,12 @@
 
                 <div class="card-content">
 
-                  <h3 class="h3 card-title">uhuy</h3>
+                  <h3 class="h3 card-title">  Kunjungan Ke PT. Smelting Indonesia</h3>
 
                   <p class="card-text">
-                    "Staff AndinTransport gatau lagi ngapain hehe hahahaahahahahqahahhah"
+                    "Crew AndinTransport sedang mengantar staff PT. Smelting Indonesia, yang merupakan perusahaan pengolahan tembaga dan timah hitam terkemuka di Indonesia. 
+                    PT. Smelting Indonesia memiliki hubungan erat dengan Freeport-McMoRan, 
+                    salah satu perusahaan pertambangan terbesar di dunia, karena mereka adalah salah satu pelanggan utama dari produk tambang Freeport."
                   </p>
 
                   <ul class="card-meta-list">
@@ -487,185 +465,10 @@
                       <div class="meta-box">
                         <ion-icon name="location"></ion-icon>
 
-                        <p class="text">Surabaya</p>
+                        <p class="text">PT. Smelting Indonesia</p>
                       </div>
                     </li>
-
                   </ul>
-
-                </div>
-
-                <div class="card-price">
-
-                  <div class="wrapper">
-
-                    <p class="reviews">( - reviews)</p>
-
-                    <div class="card-rating">
-                      <ion-icon name="star"></ion-icon>
-                      <ion-icon name="star"></ion-icon>
-                      <ion-icon name="star"></ion-icon>
-                      <ion-icon name="star"></ion-icon>
-                      <ion-icon name="star"></ion-icon>
-                    </div>
-
-                  </div>
-
-                  <p class="price">
-                    23.999K
-                    <span>/ per person</span>
-                  </p>
-
-                  <button class="btn btn-secondary">Book Now</button>
-
-                </div>
-
-              </div>
-            </li>
-
-            <li>
-              <div class="package-card">
-
-                <figure class="card-banner">
-                  <img src="./assets/images/package/bali.jpg" alt="Paket Bali" loading="lazy">
-                </figure>
-
-                <div class="card-content">
-
-                  <h3 class="h3 card-title">Paket Liburan Bali Akhir Tahun 2024</h3>
-
-                  <p class="card-text">
-                    "Rencanakan liburan impian Anda ke Bali dengan tour and travel Amenna Safeeyah untuk pengalaman yang tak terlupakan dan penuh petualangan."
-                  </p>
-
-                  <ul class="card-meta-list">
-
-                    <li class="card-meta-item">
-                      <div class="meta-box">
-                        <ion-icon name="time"></ion-icon>
-
-                        <p class="text">7D/6N</p>
-                      </div>
-                    </li>
-
-                    <li class="card-meta-item">
-                      <div class="meta-box">
-                        <ion-icon name="people"></ion-icon>
-
-                        <p class="text">pax: 10</p>
-                      </div>
-                    </li>
-
-                    <li class="card-meta-item">
-                      <div class="meta-box">
-                        <ion-icon name="location"></ion-icon>
-
-                        <p class="text">Surabaya</p>
-                      </div>
-                    </li>
-
-                  </ul>
-
-                </div>
-
-                <div class="card-price">
-
-                  <div class="wrapper">
-
-                    <p class="reviews">( - reviews)</p>
-
-                    <div class="card-rating">
-                      <ion-icon name="star"></ion-icon>
-                      <ion-icon name="star"></ion-icon>
-                      <ion-icon name="star"></ion-icon>
-                      <ion-icon name="star"></ion-icon>
-                      <ion-icon name="star"></ion-icon>
-                    </div>
-
-                  </div>
-
-                  <p class="price">
-                    800K
-                    <span>/ per person</span>
-                  </p>
-
-                  <button class="btn btn-secondary">Book Now</button>
-
-                </div>
-
-              </div>
-            </li>
-
-            <li>
-              <div class="package-card">
-
-                <figure class="card-banner">
-                  <img src="./assets/images/package/bromo.jpg" alt="Paket Bromo" loading="lazy">
-                </figure>
-
-                <div class="card-content">
-
-                  <h3 class="h3 card-title">Paket Liburan ke Gn. Bromo</h3>
-
-                  <p class="card-text">
-                    "Jelajahi keindahan Gunung Bromo dengan paket liburan dari tour and travel Amenna Safeeyah. Nikmati petualangan seru dan pemandangan spektakuler bersama kami!"
-                  </p>
-
-                  <ul class="card-meta-list">
-
-                    <li class="card-meta-item">
-                      <div class="meta-box">
-                        <ion-icon name="time"></ion-icon>
-
-                        <p class="text">7D/6N</p>
-                      </div>
-                    </li>
-
-                    <li class="card-meta-item">
-                      <div class="meta-box">
-                        <ion-icon name="people"></ion-icon>
-
-                        <p class="text">pax: 10</p>
-                      </div>
-                    </li>
-
-                    <li class="card-meta-item">
-                      <div class="meta-box">
-                        <ion-icon name="location"></ion-icon>
-
-                        <p class="text">Surabaya</p>
-                      </div>
-                    </li>
-
-                  </ul>
-
-                </div>
-
-                <div class="card-price">
-
-                  <div class="wrapper">
-
-                    <p class="reviews">( - reviews)</p>
-
-                    <div class="card-rating">
-                      <ion-icon name="star"></ion-icon>
-                      <ion-icon name="star"></ion-icon>
-                      <ion-icon name="star"></ion-icon>
-                      <ion-icon name="star"></ion-icon>
-                      <ion-icon name="star"></ion-icon>
-                    </div>
-
-                  </div>
-
-                  <p class="price">
-                    300K
-                    <span>/ per person</span>
-                  </p>
-
-                  <button class="btn btn-secondary">Book Now</button>
-
-                </div>
-
               </div>
             </li>
 
@@ -676,11 +479,7 @@
 
 
 
-
-
-      <!-- 
-        - #GALLERY
-      -->
+      <!-- Berita -->
 
       <section class="gallery" id="gallery">
         <div class="container">
@@ -720,6 +519,8 @@
                 <img src="./assets/images/Document-5.jpeg" alt="Gallery image">
               </figure>
             </li>
+
+      <!-- Lanjutkan Berita Disini -->
 
           </ul>
 
@@ -761,9 +562,7 @@
 
 
 
-  <!-- 
-    - #FOOTER
-  -->
+  <!-- Footer -->
 
   <footer class="footer">
 
@@ -862,12 +661,7 @@
   </footer>
 
 
-
-
-
-  <!-- 
-    - #GO TO TOP
-  -->
+  <!-- Go To Top -->
 
   <a href="#top" class="go-top" data-go-top>
     <ion-icon name="chevron-up-outline"></ion-icon>
@@ -877,14 +671,10 @@
 
 
 
-  <!-- 
-    - custom js link
-  -->
+  <!-- Link JS -->
   <script src="./assets/js/script.js"></script>
 
-  <!-- 
-    - ionicon link
-  -->
+  <!-- Icons -->
   <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
   <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
 
