--- a/index.html
+++ b/index.html
@@ -354,78 +354,13 @@
               </div>
             </li>
 
-            <li>
-              <div class="popularsmall-card">
-
-                <figure class="card-img">
-                  <img src="./assets/images/Coming-Soon.jpg" alt="Innova Venturer" loading="lazy">
-                </figure>
-
-                <div class="card-content">
-
-                  <p class="card-subtitle">
-                    <a href="#">Soon</a>
-                  </p>
-
-                  <h3 class="h3 card-title">
-                    <a href="#">-</a>
-                  </h3>
-
-                </div>
-
-              </div>
-            </li>
-
-            <li>
-              <div class="popularsmall-card">
-
-                <figure class="card-img">
-                  <img src="./assets/images/Coming-Soon.jpg" alt="Innova Venturer" loading="lazy">
-                </figure>
-
-                <div class="card-content">
-
-                  <p class="card-subtitle">
-                    <a href="#">Soon</a>
-                  </p>
-
-                  <h3 class="h3 card-title">
-                    <a href="#">-</a>
-                  </h3>
-
-                </div>
-
-              </div>
-            </li>
-
-            <li>
-              <div class="popularsmall-card">
-
-                <figure class="card-img">
-                  <img src="./assets/images/Coming-Soon.jpg" alt="Hiace 2023" loading="lazy">
-                </figure>
-
-                <div class="card-content">
-
-                  <p class="card-subtitle">
-                    <a href="#">Soon</a>
-                  </p>
-
-                  <h3 class="h3 card-title">
-                    <a href="#">-</a>
-                  </h3>
-
-                </div>
-
-              </div>
-            </li>
-
-      
+          <!-- Penambahan Card Content Rent Mobil di sini -->
             
           </ul>
 
         </div>
       </section>
+
 
      <!-- Berita -->
 
@@ -531,9 +466,7 @@
 
 
 
-      <!-- 
-        - #CTA
-      -->
+      <!-- CTA -->
 
       <section class="cta" id="contact">
         <div class="container">
