--- a/index.html
+++ b/index.html
@@ -151,7 +151,10 @@
       <section class="hero" id="home">
         <div class="container">
 
-          <h2 class="h1 hero-title" style="font-size: 1.5rem;">Pilihan Revolusioner untuk Sewa Mobil yang Berkualitas</h2>
+          <h2 class="h1 hero-title" style="font-size: 1.5rem; margin-top: -10px;">Pilihan Revolusioner untuk Sewa Mobil yang Berkualitas</h2>
+
+
+          <br>
 
           <p class="hero-text">
             Platform penyewaan mobil online yang aman dan tepercaya. 
