--- a/index.html
+++ b/index.html
@@ -52,10 +52,6 @@
 
         <div class="header-btn-group">
 
-          <button class="search-btn" aria-label="Search">
-            <ion-icon name="search"></ion-icon>
-          </button>
-
           <button class="nav-open-btn" aria-label="Open Menu" data-nav-open-btn>
             <ion-icon name="menu-outline"></ion-icon>
           </button>
@@ -177,14 +173,14 @@
       <section class="popular" id="rent">
         <div class="container">
 
-          <p class="section-subtitle">The Most Order</p>
+          <p class="section-subtitle">Car List</p>
 
-          <h2 class="h2 section-title">Popular Rent</h2>
+          <h2 class="h2 section-title">Our Unit</h2>
 
           <ul class="popular-list">
 
             <li>
-              <div class="popular-card">
+              <div class="popularsmall-card">
 
                 <figure class="card-img">
                   <img src="./assets/images/rent/innova-venturer.jpeg" alt="Innova Venturer" loading="lazy">
@@ -192,67 +188,43 @@
 
                 <div class="card-content">
 
-                  <div class="card-rating">
-                    <ion-icon name="star"></ion-icon>
-                    <ion-icon name="star"></ion-icon>
-                    <ion-icon name="star"></ion-icon>
-                    <ion-icon name="star"></ion-icon>
-                    <ion-icon name="star"></ion-icon>
-                  </div>
-
                   <p class="card-subtitle">
-                    <a href="#">Innova</a>
+                    <a href="#">Toyota</a>
                   </p>
 
                   <h3 class="h3 card-title">
                     <a href="#">Venturer 2023</a>
                   </h3>
 
-                  <p class="card-text">
-                    Fusce hic augue velit wisi ips quibusdam pariatur, iusto.
-                  </p>
-
                 </div>
 
               </div>
             </li>
 
             <li>
-              <div class="popular-card">
+              <div class="popularsmall-card">
 
                 <figure class="card-img">
-                  <img src="./assets/images/rent/innova-diesel.jpg" alt="Innova Diesel" loading="lazy">
+                  <img src="./assets/images/rent/innova-g.jpeg" alt="Innova Diesel" loading="lazy">
                 </figure>
 
                 <div class="card-content">
 
-                  <div class="card-rating">
-                    <ion-icon name="star"></ion-icon>
-                    <ion-icon name="star"></ion-icon>
-                    <ion-icon name="star"></ion-icon>
-                    <ion-icon name="star"></ion-icon>
-                    <ion-icon name="star"></ion-icon>
-                  </div>
-
                   <p class="card-subtitle">
-                    <a href="#">Innova</a>
+                    <a href="#">Toyota</a>
                   </p>
 
                   <h3 class="h3 card-title">
                     <a href="#">G 2023</a>
                   </h3>
 
-                  <p class="card-text">
-                    Fusce hic augue velit wisi ips quibusdam pariatur, iusto.
-                  </p>
-
                 </div>
 
               </div>
             </li>
 
             <li>
-              <div class="popular-card">
+              <div class="popularsmall-card">
 
                 <figure class="card-img">
                   <img src="./assets/images/rent/innova-trd-diesel.jpeg" alt="Innova TRD" loading="lazy">
@@ -260,25 +232,13 @@
 
                 <div class="card-content">
 
-                  <div class="card-rating">
-                    <ion-icon name="star"></ion-icon>
-                    <ion-icon name="star"></ion-icon>
-                    <ion-icon name="star"></ion-icon>
-                    <ion-icon name="star"></ion-icon>
-                    <ion-icon name="star"></ion-icon>
-                  </div>
-
                   <p class="card-subtitle">
-                    <a href="#">Innova</a>
+                    <a href="#">Toyota</a>
                   </p>
 
                   <h3 class="h3 card-title">
                     <a href="#">TRD SE 2020</a>
                   </h3>
-
-                  <p class="card-text">
-                    Fusce hic augue velit wisi ips quibusdam pariatur, iusto.
-                  </p>
 
                 </div>
 
@@ -287,8 +247,6 @@
 
           </ul>
 
-          <h2 class="h2 section-title">Our Unit</h2>
-          
           <ul class="popular-list">
 
             <li>
@@ -375,7 +333,7 @@
           <h2 class="h2 section-title">OUR UPDATED NEWS</h2>
 
           <p class="section-text">
-            Explore our news to build trust and get the insights you need. Find the latest information and trusted reviews that demonstrate our commitment to you.
+            Jelajahi berita terbaru dari Andin Transport dan lihat bagaimana kami terus berinovasi untuk melayani Anda dengan lebih baik.
           </p>
 
           <ul class="package-list">
@@ -403,7 +361,7 @@
                       <div class="meta-box">
                         <ion-icon name="location"></ion-icon>
 
-                        <p class="text">PT. Smelting Indonesia</p>
+                        <p class="text">Gresik</p>
                       </div>
                     </li>
                   </ul>
