--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
 
         </nav>
 
-        <button class="btn btn-primary" onclick="window.open('https://wa.me/6281938221739?text=Halo%20kak%20saya%20dari%20website%20AndinTransport%20ingin%20bertanya%20soal%20rental%20mobil', '_blank')">
+        <button class="btn btn-primary" onclick="window.open('https://wa.me/6281938221739?text=Halo%20kak%20saya%20dari%20website%20AndinTransport%20ingin%20bertanya%20mengenai%20rental%20mobil', '_blank')">
           Book Now
       </button>
         
@@ -189,7 +189,6 @@
                 </figure>
 
                 <div class="card-content">
-
                   <p class="card-subtitle">
                     <a href="#">Toyota</a>
                   </p>
@@ -198,7 +197,16 @@
                     <a href="#">Venturer 2023</a>
                   </h3>
 
+                  <!-- Ikon mobil dan Speedo -->
+                  <div class="car-info">
+                    <ion-icon name="car" class="car-icon"></ion-icon>
+                    <p class="car-seats-text">7 seats</p>
+
+                    <ion-icon name="speedometer" class="speedo-icon"></ion-icon>
+                    <p class="engine-text">2393 cc</p>
                 </div>
+
+                
 
               </div>
             </li>
@@ -217,9 +225,17 @@
                   </p>
 
                   <h3 class="h3 card-title">
-                    <a href="#">G 2023</a>
+                    <a href="#">Innova G 2023</a>
                   </h3>
 
+                  <!-- Ikon mobil dan Speedo -->
+                  <div class="car-info">
+                    <ion-icon name="car" class="car-icon"></ion-icon>
+                    <p class="car-seats-text">7 seats</p>
+
+                    <ion-icon name="speedometer" class="speedo-icon"></ion-icon>
+                    <p class="engine-text">1998 cc</p>
+                  </div>
                 </div>
 
               </div>
@@ -239,9 +255,16 @@
                   </p>
 
                   <h3 class="h3 card-title">
-                    <a href="#">TRD SE 2020</a>
+                    <a href="#">Innova TRD SE 2020</a>
                   </h3>
 
+                  <!-- Ikon mobil dan Speedo -->
+                  <div class="car-info">
+                    <ion-icon name="car" class="car-icon"></ion-icon>
+                    <p class="car-seats-text">7 seats</p>
+
+                    <ion-icon name="speedometer" class="speedo-icon"></ion-icon>
+                    <p class="engine-text">2393 cc</p>
                 </div>
 
               </div>
@@ -268,6 +291,13 @@
                     <a href="#">Hiace 2023</a>
                   </h3>
 
+                  <!-- Ikon mobil dan Speedo -->
+                  <div class="car-info">
+                    <ion-icon name="car" class="car-icon"></ion-icon>
+                    <p class="car-seats-text">11 seats</p>
+
+                    <ion-icon name="speedometer" class="speedo-icon"></ion-icon>
+                    <p class="engine-text">2,750 cc</p>
                 </div>
 
               </div>
@@ -290,6 +320,13 @@
                     <a href="#">Hiace Luxury 2023</a>
                   </h3>
 
+                  <!-- Ikon mobil dan Speedo -->
+                  <div class="car-info">
+                    <ion-icon name="car" class="car-icon"></ion-icon>
+                    <p class="car-seats-text">15 seats</p>
+
+                    <ion-icon name="speedometer" class="speedo-icon"></ion-icon>
+                    <p class="engine-text">2494 cc</p>
                 </div>
 
               </div>
@@ -312,6 +349,13 @@
                     <a href="#">Fortuner GR 2023</a>
                   </h3>
 
+                  <!-- Ikon mobil dan Speedo -->
+                  <div class="car-info">
+                    <ion-icon name="car" class="car-icon"></ion-icon>
+                    <p class="car-seats-text">7 seats</p>
+
+                    <ion-icon name="speedometer" class="speedo-icon"></ion-icon>
+                    <p class="engine-text">2694 cc</p>
                 </div>
 
               </div>
