--- a/index.html
+++ b/index.html
@@ -90,10 +90,6 @@
 
           <div class="navbar-top">
 
-            <a href="#" class="logo">
-              <img src="./assets/images/logo-blue.svg" alt="Tourly logo">
-            </a>
-
             <button class="nav-close-btn" aria-label="Close Menu" data-nav-close-btn>
               <ion-icon name="close-outline"></ion-icon>
             </button>
@@ -475,25 +471,7 @@
 
       <!-- CTA -->
 
-      <section class="cta" id="contact">
-        <div class="container">
-
-          <div class="cta-content">
-            <p class="section-subtitle">Call To Action</p>
-
-            <h2 class="h2 section-title">Ready For Unforgatable Travel. Remember Us!</h2>
-
-            <p class="section-text">
-              Fusce hic augue velit wisi quibusdam pariatur, iusto primis, nec nemo, rutrum. Vestibulum cumque
-              laudantium. Sit ornare
-              mollitia tenetur, aptent.
-            </p>
-          </div>
-
-          <button class="btn btn-secondary">Contact Us !</button>
-
-        </div>
-      </section>
+      
 
     </article>
   </main>
@@ -516,13 +494,13 @@
           </a>
 
           <p class="footer-text">
-            Urna ratione ante harum provident, eleifend, vulputate molestiae proin fringilla, praesentium magna conubia
-            at
-            perferendis, pretium, aenean aut ultrices.
+            Expert transportation services designed for both personal and professional 
+            travel needs across Indonesia's major urban centers.
           </p>
 
         </div>
 
+        
         <div class="footer-contact">
 
           <h4 class="contact-title">Contact Us</h4>
