--- a/index.html
+++ b/index.html
@@ -380,6 +380,7 @@
 
           <ul class="package-list">
 
+            <!-- Berita 1 -->
             <li>
               <div class="package-card">
 
@@ -410,6 +411,37 @@
               </div>
             </li>
 
+            <!-- Berita 2 -->
+            <li>
+              <div class="package-card">
+
+                <figure class="card-banner">
+                  <img src="assets/images/Document-6.jpg" alt="Penjemputan DPR RI" loading="lazy">
+                </figure>
+
+                <div class="card-content">
+
+                  <h3 class="h3 card-title">  Penjemputan DPR RI untuk dilakukan Patwal</h3>
+
+                  <p class="card-text">
+                    "Crew AndinTransport sedang mengantar staff PT. Smelting Indonesia, yang merupakan perusahaan pengolahan tembaga dan timah hitam terkemuka di Indonesia. 
+                    PT. Smelting Indonesia memiliki hubungan erat dengan Freeport-McMoRan, 
+                    salah satu perusahaan pertambangan terbesar di dunia, karena mereka adalah salah satu pelanggan utama dari produk tambang Freeport."
+                  </p>
+
+                  <ul class="card-meta-list">
+
+                    <li class="card-meta-item">
+                      <div class="meta-box">
+                        <ion-icon name="location"></ion-icon>
+
+                        <p class="text">Gresik</p>
+                      </div>
+                    </li>
+                  </ul>
+                </div>  
+            </li>
+
           </ul>
 
         </div>
@@ -417,7 +449,7 @@
 
 
 
-      <!-- Berita -->
+      <!-- Gallery -->
 
       <section class="gallery" id="gallery">
         <div class="container">
@@ -458,7 +490,7 @@
               </figure>
             </li>
 
-      <!-- Lanjutkan Berita Disini -->
+      <!-- Lanjutkan Gallery Disini -->
 
           </ul>
 
