--- a/index.html
+++ b/index.html
@@ -416,7 +416,7 @@
               <div class="package-card">
 
                 <figure class="card-banner">
-                  <img src="assets/images/Document-6.jpg" alt="Penjemputan DPR RI" loading="lazy">
+                  <img src="assets/images/Document-6.jpeg" alt="Penjemputan DPR RI" loading="lazy">
                 </figure>
 
                 <div class="card-content">
@@ -435,7 +435,7 @@
                       <div class="meta-box">
                         <ion-icon name="location"></ion-icon>
 
-                        <p class="text">Gresik</p>
+                        <p class="text">Surabaya</p>
                       </div>
                     </li>
                   </ul>
