--- a/index.html
+++ b/index.html
@@ -357,6 +357,35 @@
               </div>
             </li>
 
+            <li>
+              <div class="popularsmall-card">
+
+                <figure class="card-img">
+                  <img src="./assets/images/rent/mercedesBenz-sprinter.jpeg" alt="Mercedes Benz" loading="lazy">
+                </figure>
+
+                <div class="card-content">
+
+                  <p class="card-subtitle">
+                    <a href="#">Mercedes Benz</a>
+                  </p>
+
+                  <h3 class="h3 card-title">
+                    <a href="#">Sprinter</a>
+                  </h3>
+
+                  <!-- Ikon mobil dan Speedo -->
+                  <div class="car-info">
+                    <ion-icon name="car" class="car-icon"></ion-icon>
+                    <p class="car-seats-text">14 seats</p>
+
+                    <ion-icon name="speedometer" class="speedo-icon"></ion-icon>
+                    <p class="engine-text">2143 cc</p>
+                </div>
+
+              </div>
+            </li>
+
           <!-- Penambahan Card Content Rent Mobil di sini -->
             
           </ul>
@@ -424,9 +453,9 @@
                   <h3 class="h3 card-title">  Penjemputan DPR RI untuk dilakukan Patwal</h3>
 
                   <p class="card-text">
-                    "Crew AndinTransport sedang mengantar staff PT. Smelting Indonesia, yang merupakan perusahaan pengolahan tembaga dan timah hitam terkemuka di Indonesia. 
-                    PT. Smelting Indonesia memiliki hubungan erat dengan Freeport-McMoRan, 
-                    salah satu perusahaan pertambangan terbesar di dunia, karena mereka adalah salah satu pelanggan utama dari produk tambang Freeport."
+                    "Crew AndinTransport sedang melakukan penjemputan untuk anggota DPR RI. 
+                    Kegiatan ini didukung dengan menggunakan Unit Sprinter dimana merupakan bagian dari tugas patroli pengawalan (patwal) yang bertujuan untuk memastikan keamanan dan keselamatan selama perjalanan. 
+                    Penjemputan ini melibatkan koordinasi erat dengan pihak keamanan dan memastikan bahwa semua prosedur keamanan dipatuhi dengan ketat."
                   </p>
 
                   <ul class="card-meta-list">
