--- a/index.html
+++ b/index.html
@@ -551,13 +551,12 @@
         <div class="footer-brand">
 
           <a href="#" class="logo">
-            <img src="./assets/images/logo/andin.png" alt="logo">
+            <img src="./assets/images/logo/Andin_Transport.png" alt="logo">
           </a>
 
           <p class="footer-text">
-            Expert transportation services designed for both personal and professional 
-            travel needs across Indonesia's major urban centers.
-          </p>
+            latform penyewaan mobil online yang aman dan tepercaya. Anda dapat 
+            temukan lokasi kami dan hubungi kami untuk informasi lebih lanjut!          </p>
 
         </div>
 
@@ -567,7 +566,7 @@
           <h4 class="contact-title">Contact Us</h4>
 
           <p class="contact-text">
-            Feel free to contact and reach us !!
+            Datang atau hubungi kami! :D
           </p>
 
           <ul>
@@ -575,7 +574,7 @@
             <li class="contact-item">
               <ion-icon name="call-outline"></ion-icon>
 
-              <a href="tel:+62 85336565485" class="contact-link">+62 (853) 3656 5485</a>
+              <a href="tel:+62 818324208" class="contact-link">+62 (818)-324-208</a>
             </li>
 
             <li class="contact-item">
@@ -587,7 +586,7 @@
             <li class="contact-item">
               <ion-icon name="location-outline"></ion-icon>
 
-              <address>Tenggilis, Surabaya</address>
+              <address>Jl. Tenggilis Mejoyo Selatan V No.19, Surabaya</address>
             </li>
 
           </ul>
@@ -597,7 +596,7 @@
         <div class="footer-form">
 
           <p class="form-text">
-            Subscribe our newsletter for more update & news !!
+            Subscribe untuk tetap update dengan berita dan informasi terbaru dari Andin Transport!
           </p>
 
           <form action="" class="form-wrapper">
