--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
 
                 <div class="card-content">
                   <p class="card-subtitle">
-                    <a href="#">Toyota</a>
+                    <a href="#">Rizqi</a>
                   </p>
 
                   <h3 class="h3 card-title">
