--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>AndinTransport</title>
+  <title>Andin Transport</title>
 
   <!-- Logo Title  bos q -->
-  <link rel="shortcut icon" href="./assets/images/logo/car.png" type="image/svg+xml">
+  <link rel="shortcut icon" href="./assets/images/logo/andinlogo_title.png" type="image/svg+xml">
 
   <!-- Link CSS -->
   <link rel="stylesheet" href="./assets/css/style.css">
@@ -190,13 +190,13 @@
                   </p>
 
                   <h3 class="h3 card-title">
-                    <a href="#">Venturer 2023</a>
+                    <a href="#">Venturer</a>
                   </h3>
 
                   <!-- Ikon mobil dan Speedo -->
                   <div class="car-info">
                     <ion-icon name="car" class="car-icon"></ion-icon>
-                    <p class="car-seats-text">7 seats</p>
+                    <p class="car-seats-text">Captain Seat</p>
 
                     <ion-icon name="speedometer" class="speedo-icon"></ion-icon>
                     <p class="engine-text">2393 cc</p>
@@ -221,7 +221,7 @@
                   </p>
 
                   <h3 class="h3 card-title">
-                    <a href="#">Innova G 2023</a>
+                    <a href="#">Innova Type G</a>
                   </h3>
 
                   <!-- Ikon mobil dan Speedo -->
@@ -251,13 +251,13 @@
                   </p>
 
                   <h3 class="h3 card-title">
-                    <a href="#">Innova TRD SE 2020</a>
+                    <a href="#">Innova TRD SE</a>
                   </h3>
 
                   <!-- Ikon mobil dan Speedo -->
                   <div class="car-info">
                     <ion-icon name="car" class="car-icon"></ion-icon>
-                    <p class="car-seats-text">7 seats</p>
+                    <p class="car-seats-text">Captain Seat</p>
 
                     <ion-icon name="speedometer" class="speedo-icon"></ion-icon>
                     <p class="engine-text">2393 cc</p>
@@ -284,16 +284,16 @@
                   </p>
 
                   <h3 class="h3 card-title">
-                    <a href="#">Hiace 2023</a>
+                    <a href="#">Hiace Premio</a>
                   </h3>
 
                   <!-- Ikon mobil dan Speedo -->
                   <div class="car-info">
                     <ion-icon name="car" class="car-icon"></ion-icon>
-                    <p class="car-seats-text">11 seats</p>
+                    <p class="car-seats-text">12 seats</p>
 
                     <ion-icon name="speedometer" class="speedo-icon"></ion-icon>
-                    <p class="engine-text">2,750 cc</p>
+                    <p class="engine-text">2755 cc</p>
                 </div>
 
               </div>
@@ -313,13 +313,13 @@
                   </p>
 
                   <h3 class="h3 card-title">
-                    <a href="#">Hiace Luxury 2023</a>
+                    <a href="#">Hiace Luxury</a>
                   </h3>
 
                   <!-- Ikon mobil dan Speedo -->
                   <div class="car-info">
                     <ion-icon name="car" class="car-icon"></ion-icon>
-                    <p class="car-seats-text">15 seats</p>
+                    <p class="car-seats-text">9-12 seats</p>
 
                     <ion-icon name="speedometer" class="speedo-icon"></ion-icon>
                     <p class="engine-text">2494 cc</p>
@@ -342,7 +342,7 @@
                   </p>
 
                   <h3 class="h3 card-title">
-                    <a href="#">Fortuner GR 2023</a>
+                    <a href="#">Fortuner GR</a>
                   </h3>
 
                   <!-- Ikon mobil dan Speedo -->
@@ -351,7 +351,7 @@
                     <p class="car-seats-text">7 seats</p>
 
                     <ion-icon name="speedometer" class="speedo-icon"></ion-icon>
-                    <p class="engine-text">2694 cc</p>
+                    <p class="engine-text">2755 cc</p>
                 </div>
 
               </div>
@@ -377,7 +377,7 @@
                   <!-- Ikon mobil dan Speedo -->
                   <div class="car-info">
                     <ion-icon name="car" class="car-icon"></ion-icon>
-                    <p class="car-seats-text">14 seats</p>
+                    <p class="car-seats-text">8-11 seats</p>
 
                     <ion-icon name="speedometer" class="speedo-icon"></ion-icon>
                     <p class="engine-text">2143 cc</p>
